<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carrierbot_mqtt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="quangduy160204@gmail.com">duybuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
